# docbooktoxtm

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
docbooktoxtm/: __init__.py  __main__.py  bookclasses.py  config.py  functions.py  logconfig.py  main.py  resource.py  unsource.py
docbooktoxtm_typer/: __main__.py  functions.py  main.py
tests/: better_book_map.py  fractal.py  test_docbooktoxtm.py  test_docbooktoxtm_typer.py  test_get_zip.py  test_github.py
tests/DTX123-source/DTX123-0.0.1.dev5/: .gitignore
tests/DTX123-source/DTX123-0.0.1.dev5/guides/en-US/: Book_Info.xml  Course_Preface.xml  DTX123-SG.xml  Intro-Classroom.xml  Revision_History.xml  common.ent
tests/DTX123-source/DTX123-0.0.1.dev5/guides/en-US/sg-chapters/: appendix-a.xml  eight_chapter.xml  four_chapter.xml  nine_chapter.xml  seven_chapter.xml
tests/DTX123-source/DTX123-0.0.1.dev5/guides/en-US/sg-chapters/topics/appendix/: one-section.xml  three-section.xml
tests/DTX123-source/DTX123-0.0.1.dev5/guides/en-US/sg-chapters/topics/chapter-review/: four-section.xml  two-section.xml
tests/test_files/DTX123-0.0.1.dev1/guides/: DTX123.xpr  publican-sg.cfg
tests/test_files/DTX123-0.0.1.dev1/guides/en-US/Common/: Control-Classroom.xml  Conventions.xml  Intro-i18n.xml
tests/test_files/DTX123-0.0.1.dev1/guides/en-US/sg-chapters/: appendix-b.xml  appendix-c.xml  chapter-review.xml  five_chapter.xml  one_chapter.xml  six_chapter.xml  ten_chapter.xml  three_chapter.xml  two_chapter.xml
xmltoxtm/: __main__.py  functions.py
(+80 files in other folders)
