[tool.poetry]
name = "docbooktoxtm"
version = "1.2.1"
description = ""
authors = ["Ryan O'Rourke <ryan.orourke@welocalize.com>"]
readme = 'README.md'

[tool.poetry.scripts]
docbooktoxtm = "docbooktoxtm.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.3.0"}
xmltodict = "^0.12.0"
lxml = "^4.5.1"
pydantic = "^1.5.1"
PyGithub = "^1.51"
requests = "^2.24.0"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
